Add truncation status label

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -136,7 +136,7 @@
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/off-screen/' %}is-active{% endif %}" href="/utilities/off-screen/">Off-screen</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/padding-collapse/' %}is-active{% endif %}" href="/utilities/padding-collapse/">Padding collapse</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/table-cell-padding-overlap/' %}is-active{% endif %}" href="/utilities/table-cell-padding-overlap/">Table cell padding overlap</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/truncate/' %}is-active{% endif %}" href="/utilities/truncate/">Truncation</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/truncate/' %}is-active{% endif %}" href="/utilities/truncate/">Truncation</a><div class="p-label--new u-float-right u-no-margin--bottom">New</div></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/show/' %}is-active{% endif %}" href="/utilities/show/">Show</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/vertically-center/' %}is-active{% endif %}" href="/utilities/vertically-center/">Vertically center</a></li>
                 </ul>
