Fix :visited link styles in subnav

--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -136,7 +136,8 @@
 
     &,
     &:active,
-    &:focus &:visited {
+    &:focus,
+    &:visited {
       color: $colors--light-theme--text-default;
     }
 
@@ -157,7 +158,8 @@
 
     &,
     &:active,
-    &:focus &:visited {
+    &:focus,
+    &:visited {
       color: $colors--dark-theme--text-default;
     }
 
