--- a/scss/_patterns_code-copyable.scss
+++ b/scss/_patterns_code-copyable.scss
@@ -36,6 +36,8 @@ $cc-button-size: 36px;
     color: $color-mid-dark;
     font-family: unquote($font-monospace);
     line-height: map-get($line-heights, default-text);
+    margin-bottom: 0;
+    margin-top: 0;
     padding: 0 calc(#{$cc-button-size} + #{$sph-inner--small}) 0 $sph-inner * 1.5;
     width: 100%;
   }
