change unset to initial to support ie

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -57,12 +57,12 @@ $navigation-hover-opacity: 0.58;
           top: 0;
 
           @media (min-width: $breakpoint-navigation-threshold) {
-            content: unset;
-            height: unset;
-            left: unset;
-            position: unset;
-            right: unset;
-            top: unset;
+            content: initial;
+            height: initial;
+            left: initial;
+            position: initial;
+            right: initial;
+            top: initial;
           }
         }
 
@@ -123,7 +123,7 @@ $navigation-hover-opacity: 0.58;
         flex: 1 1 auto;
         margin: $input-gap-top 0 auto auto;
         max-width: 20rem;
-        min-width: unset;
+        min-width: initial;
         order: 1;
       }
     }
@@ -207,7 +207,7 @@ $navigation-hover-opacity: 0.58;
       // XXX: patch - override utility, as it positions absolutely, which leads to overlap on smaller screens.
       // Should use flex instead; But that will require changing the markup
       position: relative;
-      right: unset;
+      right: initial;
     }
   }
 
