set a::before content to none so it doesnt appear in ie

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -57,12 +57,7 @@ $navigation-hover-opacity: 0.58;
           top: 0;
 
           @media (min-width: $breakpoint-navigation-threshold) {
-            content: initial;
-            height: initial;
-            left: initial;
-            position: initial;
-            right: initial;
-            top: initial;
+            content: none;
           }
         }
 
