--- a/scss/_base_forms.scss
+++ b/scss/_base_forms.scss
@@ -1,9 +1,11 @@
 @import 'settings';
 @import 'base_forms-tick-elements';
+@import 'base_forms-range';
 
 // Form element styles
 @mixin vf-b-forms {
   @include vf-b-tick-elements;
+  @include vf-b-range;
 
   // Used in buttons, inputs
   %bordered-text-vertical-padding {
