fix contextual menu position

--- a/scss/_patterns_contextual-menu.scss
+++ b/scss/_patterns_contextual-menu.scss
@@ -90,6 +90,15 @@
     margin-bottom: $spv-inner--small + ($spv-nudge-compensation * 2);
   }
 
+  .p-contextual-menu__dropdown {
+    // sass-lint:disable no-qualifying-elements
+    button.p-contextual-menu__toggle + &,
+    [class*='p-button'] {
+      margin-top: -#{$input-margin-bottom};
+    }
+    // sass-lint:enable no-qualifying-elements
+  }
+
   .p-contextual-menu__link {
     @include vf-focus;
     border: 0;
