fix search input placement in IE11

--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -38,6 +38,7 @@
     margin-bottom: 0;
     padding-right: calc(2 * #{2 * $spv-nudge + map-get($line-heights, default-text)});
     position: absolute;
+    right: 0;
 
     &::-webkit-search-cancel-button {
       -webkit-appearance: none; // sass-lint:disable-line no-vendor-prefixes
